@@ -20,6 +20,7 @@ build
 # other
 eclipse
 run
+.DS_Store
 
 # Files from Forge MDK
 forge*changelog.txt
