@@ -13,7 +13,7 @@ apply plugin: 'net.minecraftforge.gradle'
 apply plugin: 'eclipse'
 apply plugin: 'maven-publish'
 
-version = '1.0.0'
+version = '1.0.1'
 group = 'com.haoict.tiab' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = 'time-in-a-bottle'
 
