@@ -1,0 +1,6 @@
+package com.haoict.tiab;
+
+public class CommonProxy {
+  public CommonProxy() {
+  }
+}
