@@ -1,2 +1,5 @@
-Build: 1.0.0 - 2012/02/10
+Build: 1.0.1 - 2021/02/12
+- Fix server initialization error
+
+Build: 1.0.0 - 2021/02/10
 - Initial release
